2004-12-13  Callum McKenzie  <callum@physics.otago.ac.nz>

        * glines.c: Some code cleanups. This includes some unnecessary 
	arithmetic that may have been the source of Marco's corruption
	bug. Removed another cryptic Hungarian comment, the issue in 
	question has been fixed.
	
	* glines.c:	
	* glines.h: Patch from Marco Colombo <m.colombo@ed.ac.uk> to
	decouple the width and height of the grid. A first step towards
	feature request #83532.

2004-12-07  Richard Hoelscher  <rah@rahga.com>
 
 	* glines.c (field_expose_event): Keyboard cursor now black or 
 	white, depending on average value of background color RGB channels.
 	(refresh_pixmaps): When theme refuses to render, use a blank pixbuf.
 
2004-11-30  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c (main): Alan Horkan's incredibly complicated patch to
	eliminate a semantic difficulty in the preview labelling.

2004-11-18  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/glines.xml: Explain how to use the keyboard.

	* glines.c: Apply a keyboard-control patch from Anton
	Gavrilov. Also removed the cryptic /* XXX Ezt megkapja */ comment
	(it is Hungarian for 'it gets this one', I have never understood
	it).

2004-11-16  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c (load_image): Fall back to the default if the theme is
	not found. Put up the error dialog only if that fails. Bug
	#158409.

2004-10-13  Richard Hoelscher  <rah@rahga.com>

	* glines.c: Use games_preimage in place of gdk_pixbuf loading and
	scaling, to provide better SVG support.

2004-10-11  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c: Use the new games_gridframe_set_padding API to get the
	borders right. Also simplify the code. Fixes bug #154982.
	(show_scores): Switch unmap -> destroy since unmap wasn't working
	for sme people.

2004-10-09  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c: Make sure that calling show_scores from the menu
	doesn't trigger a new game.
